syntax = "proto3";

package tools;
option go_package = "./;tools";

service ToolsServer {
  rpc InstallPackageStreamingMessage(installPackageReq) returns (stream installPackageRes) {};
  rpc SetTaskStreamingMessage(setTaskReq) returns (stream setTaskRes) {};
}

enum Operate {
  INSTALL = 0;
  REMOVE = 1;
  UPDATE = 2;
}

message installPackageRes {
  string name = 1;
  string version = 2;
  Operate operate = 3;
}

message installPackageReq {}

enum TimerStatusOperate {
  ADD = 0;
  DELETE = 1;
  RESET = 2;
}


message setTaskRes {
  uint64 ID = 1;
  int64 EntryID = 2;
  TimerStatusOperate TimerStatus = 3;
}

message setTaskReq {}
